# ow-match-log

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.config.ts  biome.json  components.json  docker-compose.yaml  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: docker-build-push.yml  docker-build.yml  release.yml
app/: routeTree.gen.ts  ssr.tsx
app/actions/: index.ts
app/components/: forceClient.tsx  header.tsx  import.tsx  loadingSpinner.tsx  matchTable.tsx  processingDialog.tsx  sidebar.tsx  ssi.tsx
app/components/charts/: activityChart.tsx  barChart.tsx  boxPlot.tsx
app/components/ui/: button.tsx  dialog.tsx  separator.tsx  sidebar.tsx  tabs.tsx
app/db/: index.ts  schema.ts
app/lib/: imageProcessing.ts  maps.ts  try-catch.ts
app/routes/: __root.tsx  collection.$collectionId.tsx  data.tsx  import.tsx  index.tsx  statistics.tsx
app/styles/: app.css
drizzle/: 0000_chemical_firedrake.sql  0000_shocking_nicolaos.sql  0001_black_luminals.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
ocr/: main.py  pyproject.toml
